chore: variable prompt

--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -3,6 +3,7 @@
     "REFRESH": "Refresh",
     "CLOSE": "Close",
     "OK": "Ok",
+    "OK_VARIABLE": "Ok",
     "START": "Let's get started!",
     "DONE": "Done",
     "NEW": "New",
@@ -76,7 +77,7 @@
     "EDITORCHANGE_CONFIRM": "That's okay",
     "EDITORCHANGEINSTRUCTIONS": "You have unsaved changes. If you go to the block-editor now, they will be lost.",
     "CLEAR_LIBS": "Restore libraries",
-    "NAME_VARIABLE_PROMPT_INPUT": "Enter a name for your variable:",
+    "NAME_VARIABLE_PROMPT_INPUT": "Name your variable",
     "NO_DEVICE_SELECTED": "No robot selected",
     "COULD_NOT_CONNECT": "Could not connect to robot",
     "NOT_IN_SYNC": "Robot not in sync, please reconnect",
