--- a/src/assets/translations/nl.json
+++ b/src/assets/translations/nl.json
@@ -3,6 +3,7 @@
     "REFRESH": "Ververs",
     "CLOSE": "Sluiten",
     "OK": "Ik begrijp het",
+    "OK_VARIABLE": "Ok",
     "START": "Aan de slag!",
     "DONE": "Klaar",
     "NEW": "Nieuw",
@@ -76,7 +77,7 @@
     "EDITORCHANGE_CONFIRM": "Dat is oké",
     "EDITORCHANGEINSTRUCTIONS": "Je hebt onopgeslagen wijzigingen. Als je nu naar het Blokken-scherm gaat, ben je die kwijt.",
     "CLEAR_LIBS": "Herstel bibliotheken",
-    "NAME_VARIABLE_PROMPT_INPUT": "Geef een naam voor de variabele",
+    "NAME_VARIABLE_PROMPT_INPUT": "Geef je variabele een naam",
     "NO_DEVICE_SELECTED": "Geen robot geselecteerd",
     "COULD_NOT_CONNECT": "Kan geen verbinding maken met de robot",
     "NOT_IN_SYNC": "De robot is niet in sync, probeer het opnieuw",
