--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -112,5 +112,7 @@
 	"CREATE_FOLDER": "Create folder",
 	"DOWNLOADING_FIRMWARE": "Downloading firmware",
 	"UPLOADING_FIRMWARE": "Uploading firmware",
-	"INSTALLING_LIBRARIES": "Installing libraries"
+	"INSTALLING_LIBRARIES": "Installing libraries",
+	"NOT_CONNECTED": "Not connected",
+	"NOT_CONNECTED_DESC": "You won't see new output"
 }
