fix: add confirmation after clicking send

--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -98,6 +98,7 @@
 	"DEVICE_INFORMATION": "Device information",
 	"EMAIL": "Email",
 	"FEEDBACK": "Suggestion / Feedback",
+	"FEEDBACK_SENT": "Your feedback has been sent, thank you!",
 	"FLASH_FIRMWARE": "Flash firmware",
 	"FLASHING": "Flashing firmware...",
 	"FLASHED": "Firmware flashed",
