feat: add Sentry-based user feedback form (#55)

--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -18,6 +18,8 @@
 	"MORE": "More...",
 	"MORE_ABOUT": "About Easybloqs",
 	"UPLOAD": "Upload to robot",
+	"SEND": "Send",
+	"NAME": "Your name...",
 	"DRIVERINSTALLATIONINSTRUCTIONS_TITLE": "We are almost ready!",
 	"DRIVERINSTALLATIONINSTRUCTIONS": "You will get two popups to install the USB driver. Click 'Yes' and then 'Install'.",
 	"CONNECTIONINSTRUCTIONS_TITLE": "Robot not found",
@@ -95,6 +97,8 @@
 	"UNKNOWN": "Unknown",
 	"DEVICE_INFORMATION": "Device information",
 	"EMAIL": "Email",
+	"FEEDBACK": "Suggestion / Feedback",
+	"FEEDBACK_SENT": "Your feedback has been sent, thank you!",
 	"FLASH_FIRMWARE": "Flash firmware",
 	"FLASHING": "Flashing firmware...",
 	"FLASHED": "Firmware flashed",
