--- a/src/assets/translations/nl.json
+++ b/src/assets/translations/nl.json
@@ -18,6 +18,8 @@
 	"MORE": "Meer...",
 	"MORE_ABOUT": "Over Easybloqs",
 	"UPLOAD": "Upload naar robot",
+	"SEND": "Versturen",
+	"NAME": "Je naam...",
 	"DRIVERINSTALLATIONINSTRUCTIONS_TITLE": "We zijn bijna klaar!",
 	"DRIVERINSTALLATIONINSTRUCTIONS": "Je krijgt nu nog twee popups om de USB driver te installeren. Klik op 'Yes' en dan op 'Install'.",
 	"CONNECTIONINSTRUCTIONS_TITLE": "Robot niet gevonden",
@@ -95,6 +97,8 @@
 	"UNKNOWN": "Niet gevonden",
 	"DEVICE_INFORMATION": "Apparaat informatie",
 	"EMAIL": "E-mail",
+	"FEEDBACK": "Suggestie / Feedback",
+	"FEEDBACK_SENT": "Uw feedback is verstuurd, bedankt!",
 	"FLASH_FIRMWARE": "Firmware flashen",
 	"FLASHING": "Flashing de firmware...",
 	"FLASHED": "Firmware succesvol geflashed",
