fix: nodig -> nog

--- a/src/assets/translations/nl.json
+++ b/src/assets/translations/nl.json
@@ -122,5 +122,5 @@
 	"EXPLANATION": "Uitleg",
 	"EXPLAIN_BLOCK": "Leg blok uit ✨",
 	"META_ATTRIBUTION": "Gemaakt met Meta Llama 3",
-	"AI_RATE_LIMITED": "De uitleg robot is op dit moment erg druk, probeer het later nodig eens."
+	"AI_RATE_LIMITED": "De uitleg robot is op dit moment erg druk, probeer het later nog eens."
 }
