--- a/src/assets/translations/nl.json
+++ b/src/assets/translations/nl.json
@@ -121,5 +121,6 @@
 	"NOT_CONNECTED_DESC": "Je ziet geen nieuwe output",
 	"EXPLANATION": "Uitleg",
 	"EXPLAIN_BLOCK": "Leg blok uit ✨",
-	"META_ATTRIBUTION": "Gemaakt met Meta Llama 3"
+	"META_ATTRIBUTION": "Gemaakt met Meta Llama 3",
+	"AI_RATE_LIMITED": "De uitleg robot is op dit moment erg druk, probeer het later nog eens."
 }
