fix: uploader clears all state when starting to upload to ensure it won't get in a bad state

--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -33,6 +33,7 @@
 	"COMPILATION_STARTED": "Compiling...",
 	"COMPILATION_FAILED": "Compilation error!",
 	"COMPILATION_COMPLETE": "Compilation complete",
+	"WAITING_FOR_PORT": "Accessing port...",
 	"UPDATE_STARTED": "Updating Robot...",
 	"UPDATE_FAILED": "Updating Robot failed!",
 	"UPDATE_COMPLETE": "Robot update complete",
