feat: ESP32 MicroPython (#108)

--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -122,5 +122,6 @@
 	"EXPLANATION": "Explanation",
 	"EXPLAIN_BLOCK": "Explain Block ✨",
 	"META_ATTRIBUTION": "Built with Meta Llama 3",
-	"AI_RATE_LIMITED": "The explanation robot is a little too busy right now, please try again later."
+	"AI_RATE_LIMITED": "The explanation robot is a little too busy right now, please try again later.",
+	"CHOOSING_ROBOT": "Choose your board"
 }
