--- a/src/assets/translations/nl.json
+++ b/src/assets/translations/nl.json
@@ -124,5 +124,10 @@
 	"EXPLAIN_BLOCK": "Leg blok uit ✨",
 	"META_ATTRIBUTION": "Gemaakt met Meta Llama 3",
 	"AI_RATE_LIMITED": "De uitleg robot is op dit moment erg druk, probeer het later nog eens.",
-	"CHOOSING_ROBOT": "Kies je arduino"
+	"CHOOSING_ROBOT": "Kies je arduino",
+	"BROWSER_NOT_SUPPORTED": "De browser die je gebruikt support geen web-serial.",
+	"BROWSER_NOT_SUPPORTED_1": "Je zal daardoor je code niet kunnen uploaden.",
+	"BROWSER_NOT_SUPPORTED_SUGGESTION": "Een chromium based browser zou werken (Edge/Chrome/Brave)",
+	"ACKNOWLEDGE_BROWSER_NOT_SUPPORTED": "I snap het",
+	"ACKNOWLEDGE_BROWSER_NOT_SUPPORTED_DONT_SHOW_AGAIN": "Laat niet meer zien"
 }
