--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -125,7 +125,7 @@
 	"META_ATTRIBUTION": "Built with Meta Llama 3",
 	"AI_RATE_LIMITED": "The explanation robot is a little too busy right now, please try again later.",
 	"CHOOSING_ROBOT": "Choose your board",
-	"BROWSER_NOT_SUPPORTED": "The browser you are using doesn't support web-serial.",
+	"BROWSER_NOT_SUPPORTED": "The browser you are using doesn't support web-serial or web-usb.",
 	"BROWSER_NOT_SUPPORTED_1": "You won't be able to upload your code.",
 	"BROWSER_NOT_SUPPORTED_SUGGESTION": "A chromium based browser should work (Edge/Chrome/Brave)",
 	"ACKNOWLEDGE_BROWSER_NOT_SUPPORTED": "I understand",
