feat: implement new connect popup

--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -124,5 +124,11 @@
 	"EXPLAIN_BLOCK": "Explain Block ✨",
 	"META_ATTRIBUTION": "Built with Meta Llama 3",
 	"AI_RATE_LIMITED": "The explanation robot is a little too busy right now, please try again later.",
-	"CHOOSING_ROBOT": "Choose your board"
+	"CHOOSING_ROBOT": "Choose your board",
+	"INVALID_ROBOT": "The selected robot {robot} does not work with the automatically detected {board}!",
+	"INCOMPATIBLE_PROJECT": "Incompatible",
+	"CONTINUE": "Continue",
+	"UNKNOWN_BOARD": "Unknown",
+	"CLEAR_PROJECT": "Clear project",
+	"CLEAR_PROJECT_DESC": "Selecting this robot will clear your project, are you sure?"
 }
