--- a/src/assets/translations/nl.json
+++ b/src/assets/translations/nl.json
@@ -124,5 +124,11 @@
 	"EXPLAIN_BLOCK": "Leg blok uit ✨",
 	"META_ATTRIBUTION": "Gemaakt met Meta Llama 3",
 	"AI_RATE_LIMITED": "De uitleg robot is op dit moment erg druk, probeer het later nog eens.",
-	"CHOOSING_ROBOT": "Kies je arduino"
+	"CHOOSING_ROBOT": "Kies je arduino",
+	"INVALID_ROBOT": "De geselecteerde robot {robot} werkt niet met de automatisch gedetecteerde {board}!",
+	"INCOMPATIBLE_PROJECT": "Ongeschikt",
+	"CONTINUE": "Ga door",
+	"UNKNOWN_BOARD": "Onbekend",
+	"CLEAR_PROJECT": "Wis project",
+	"CLEAR_PROJECT_DESC": "Door deze robot te selecteren wis je je project, weet je het zeker?"
 }
