--- a/src/assets/translations/nl.json
+++ b/src/assets/translations/nl.json
@@ -128,7 +128,7 @@
 	"BROWSER_NOT_SUPPORTED": "De browser die je gebruikt support geen web-serial of web-usb.",
 	"BROWSER_NOT_SUPPORTED_1": "Je zal daardoor je code niet kunnen uploaden.",
 	"BROWSER_NOT_SUPPORTED_SUGGESTION": "Een chromium based browser zou werken (Edge/Chrome/Brave)",
-	"ACKNOWLEDGE_BROWSER_NOT_SUPPORTED": "I snap het",
+	"ACKNOWLEDGE_BROWSER_NOT_SUPPORTED": "Ik snap het",
 	"ACKNOWLEDGE_BROWSER_NOT_SUPPORTED_DONT_SHOW_AGAIN": "Laat niet meer zien",
 	"INVALID_ROBOT_TITLE": "Ongeschikte robot",
 	"INVALID_ROBOT": "De geselecteerde robot {robot} werkt niet met de automatisch gedetecteerde {board}!",
