chore: fix translations
Co-authored-by: Ronald Moesbergen <rmoesbergen@users.noreply.github.com>

--- a/src/assets/translations/nl.json
+++ b/src/assets/translations/nl.json
@@ -138,5 +138,5 @@
 	"CLEAR_PROJECT": "Wis project",
 	"CLEAR_PROJECT_DESC": "Door deze robot te selecteren wis je je project, weet je het zeker?",
 	"DRIVER_INSTALL_TITLE": "Hoe installeer je drivers?",
-	"DRIVER_INSTALL_TEXT": "Je zal eerst het zip bestand moeten openen, dan alle programma's erin moeten uitvoeren en als laatste de computer opnieuw opstarten."
+	"DRIVER_INSTALL_TEXT": "Bekijk het filmpje voor uitleg hoe je de drivers kunt installeren."
 }
