--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -14,7 +14,7 @@
 	"PROJECT": "My projects",
 	"HELP": "Tips",
 	"HELP_FORUM": "Leaphy Discord (Help forum)",
-	"DOWNLOAD_DRIVERS": "Windows drivers",
+	"DOWNLOAD_DRIVERS": "Download drivers",
 	"MORE": "More...",
 	"MORE_ABOUT": "About Easybloqs",
 	"UPLOAD": "Upload to robot",
@@ -136,5 +136,7 @@
 	"CONTINUE": "Continue",
 	"UNKNOWN_BOARD": "Unknown",
 	"CLEAR_PROJECT": "Clear project",
-	"CLEAR_PROJECT_DESC": "Selecting this robot will clear your project, are you sure?"
+	"CLEAR_PROJECT_DESC": "Selecting this robot will clear your project, are you sure?",
+	"DRIVER_INSTALL_TITLE": "How to install drivers?",
+	"DRIVER_INSTALL_TEXT": "Please follow the steps in the instruction video below to install the drivers."
 }
