--- a/src/assets/translations/nl.json
+++ b/src/assets/translations/nl.json
@@ -14,7 +14,7 @@
 	"PROJECT": "Mijn projecten",
 	"HELP": "Tips",
 	"HELP_FORUM": "Leaphy Discord (Help Forum)",
-	"DOWNLOAD_DRIVERS": "Windows drivers",
+	"DOWNLOAD_DRIVERS": "Download drivers",
 	"MORE": "Meer...",
 	"MORE_ABOUT": "Over Easybloqs",
 	"UPLOAD": "Upload naar robot",
@@ -136,5 +136,7 @@
 	"CONTINUE": "Ga door",
 	"UNKNOWN_BOARD": "Onbekend",
 	"CLEAR_PROJECT": "Wis project",
-	"CLEAR_PROJECT_DESC": "Door deze robot te selecteren wis je je project, weet je het zeker?"
+	"CLEAR_PROJECT_DESC": "Door deze robot te selecteren wis je je project, weet je het zeker?",
+	"DRIVER_INSTALL_TITLE": "Hoe installeer je drivers?",
+	"DRIVER_INSTALL_TEXT": "Bekijk het filmpje voor uitleg hoe je de drivers kunt installeren."
 }
