fix: robot connection failing because another tab is using it

--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -143,5 +143,7 @@
 	"INVALID_WORKSPACE": "Invalid project",
 	"INVALID_WORKSPACE_MESSAGE": "That doesn't look like a Leaphy Project, please verify that you have selected the correct file",
 	"UNDEFINED_ROBOT": "Project name invalid",
-	"UNDEFINED_ROBOT_MESSAGE": "This does seem like a valid Leaphy Project, but the robot type was not included in the name, we've kept your previous robot selection for now."
+	"UNDEFINED_ROBOT_MESSAGE": "This does seem like a valid Leaphy Project, but the robot type was not included in the name, we've kept your previous robot selection for now.",
+	"ROBOT_RESERVED": "Unable to connect to robot",
+	"ROBOT_RESERVED_MESSAGE": "It appears that we're unable to connect to the robot, the port might be in use by another program or another tab"
 }
