--- a/src/assets/translations/nl.json
+++ b/src/assets/translations/nl.json
@@ -145,5 +145,5 @@
 	"UNDEFINED_ROBOT": "Ongeldige project naam",
 	"UNDEFINED_ROBOT_MESSAGE": "Dit project ziet er goed uit, maar het type robot staat niet in de naam, je vorige robot selectie is behouden",
 	"ROBOT_RESERVED": "Verbinding onmogelijk",
-	"ROBOT_RESERVED_MESSAGE": "Het lijkt erop dat we niet kunnen verbinden met de robot, de poort zou in gebruik kunnen zjin door een ander programma of een andere app"
+	"ROBOT_RESERVED_MESSAGE": "Het lijkt erop dat we niet kunnen verbinden met de robot, de poort zou in gebruik kunnen zijn door een ander programma of een andere app"
 }
