--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -14,7 +14,7 @@
 	"PROJECT": "My projects",
 	"HELP": "Tips",
 	"HELP_FORUM": "Leaphy Discord (Help forum)",
-	"DOWNLOAD_DRIVERS": "Download drivers",
+	"DOWNLOAD_DRIVERS": "Windows drivers",
 	"MORE": "More...",
 	"MORE_ABOUT": "About Easybloqs",
 	"UPLOAD": "Upload to robot",
@@ -125,18 +125,11 @@
 	"META_ATTRIBUTION": "Built with Meta Llama 3",
 	"AI_RATE_LIMITED": "The explanation robot is a little too busy right now, please try again later.",
 	"CHOOSING_ROBOT": "Choose your board",
-	"BROWSER_NOT_SUPPORTED": "The browser you are using doesn't support web-serial or web-usb.",
-	"BROWSER_NOT_SUPPORTED_1": "You won't be able to upload your code.",
-	"BROWSER_NOT_SUPPORTED_SUGGESTION": "A chromium based browser should work (Edge/Chrome/Brave)",
-	"ACKNOWLEDGE_BROWSER_NOT_SUPPORTED": "I understand",
-	"ACKNOWLEDGE_BROWSER_NOT_SUPPORTED_DONT_SHOW_AGAIN": "Don't show again",
 	"INVALID_ROBOT_TITLE": "Incompatible device",
 	"INVALID_ROBOT": "The selected robot {robot} does not work with the automatically detected {board}!",
 	"INCOMPATIBLE_PROJECT": "Incompatible",
 	"CONTINUE": "Continue",
 	"UNKNOWN_BOARD": "Unknown",
 	"CLEAR_PROJECT": "Clear project",
-	"CLEAR_PROJECT_DESC": "Selecting this robot will clear your project, are you sure?",
-	"DRIVER_INSTALL_TITLE": "How to install drivers?",
-	"DRIVER_INSTALL_TEXT": "Please follow the steps in the instruction video below to install the drivers."
+	"CLEAR_PROJECT_DESC": "Selecting this robot will clear your project, are you sure?"
 }
