--- a/src/assets/translations/nl.json
+++ b/src/assets/translations/nl.json
@@ -169,5 +169,5 @@
 	"AUTOGRADING_PASSED": "Gelukt!",
 	"AUTOGRADING_PASSED_DESC": "Gefeliciteerd met het sucessvol afronden van deze opdracht!",
 	"AUTOGRADING_FAILED": "Volgende keer beter...",
-	"DONE_ASSIGNMENT": "Ingeveleverd"
+	"DONE_ASSIGNMENT": "Ingeleverd"
 }
