--- a/packages/client/src/assets/translations/en.json
+++ b/packages/client/src/assets/translations/en.json
@@ -174,5 +174,6 @@
 	"CONTINUE_WORKING_DESC": "Continue where you left off by selecting a recent project",
 	"LOCAL_SAVE": "Local save",
 	"TEMP_SAVE": "Temporary save",
-	"NO_INTERNET": "No internet, please check your connection"
+	"NO_INTERNET": "No internet, please check your connection",
+	"CHANGE_ROBOT": "Switch robot"
 }
