--- a/packages/client/src/assets/translations/nl.json
+++ b/packages/client/src/assets/translations/nl.json
@@ -170,5 +170,10 @@
 	"AUTOGRADING_PASSED_DESC": "Gefeliciteerd met het sucessvol afronden van deze opdracht!",
 	"AUTOGRADING_FAILED": "Volgende keer beter...",
 	"DONE_ASSIGNMENT": "Ingeleverd",
-	"NO_INTERNET": "Geen internetverbinding, controleer je verbinding"
+	"CONTINUE_WORKING": "Ga door met bewerken",
+	"CONTINUE_WORKING_DESC": "Ga door waar je was gebleven door een recent project te selecteren",
+	"LOCAL_SAVE": "Lokaal opgeslagen",
+	"TEMP_SAVE": "Tijdelijk opgeslagen",
+	"NO_INTERNET": "Geen internetverbinding, controleer je verbinding",
+	"CHANGE_ROBOT": "Verander robot"
 }
