--- a/packages/client/src/assets/translations/en.json
+++ b/packages/client/src/assets/translations/en.json
@@ -175,5 +175,37 @@
 	"LOCAL_SAVE": "Local save",
 	"TEMP_SAVE": "Temporary save",
 	"NO_INTERNET": "No internet, please check your connection",
-	"CHANGE_ROBOT": "Switch robot"
+	"CHANGE_ROBOT": "Switch robot",
+	"ML_OPEN": "Open ML",
+	"ML_CLOSE": "Close ML",
+	"ML_CLEAR_DATASETS": "This will clear your current datasets, Are you sure you want to continue?",
+	"ML_PREPARE_TITLE": "Prepare your robot",
+	"ML_PREPARE_DESC": "Set up your sensors and upload the training program to your robot",
+	"ML_NO_SENSORS": "No sensors have been added yet",
+	"ML_ADD_SENSOR": "Add sensor",
+	"ML_NOT_CONNECTED": "Not connected",
+	"ML_NOT_CONNECTED_DESC": "Please connect to your robot over Bluetooth",
+	"ML_CONNECT": "Connect",
+	"ML_COLLECT_TITLE": "Collect your data",
+	"ML_COLLECT_DESC": "Bind classes to your keyboard and show the robot what it needs to do",
+	"ML_RECORDING_FOR": "Recording for {target}",
+	"ML_RECORDING": "Press a key to record data",
+	"ML_RECORD": "Record data",
+	"ML_MANUAL": "Manual mode",
+	"ML_TRAIN_TITLE": "Train your model",
+	"ML_TRAIN_DESC": "Let's train your model and get it ready for deployment",
+	"ML_EPOCHS": "Epochs",
+	"ML_DISTRIBUTION": "Distribution",
+	"ML_TOTAL": "total",
+	"ML_TRAIN": "Train",
+	"ML_UPLOAD_TITLE": "Upload your model",
+	"ML_UPLOAD_DESC": "Check your models performance and upload it to your robot",
+	"ML_PREDICTED": "Predicted",
+	"ML_ACTUAL": "Actual",
+	"ML_TRAINING": "Training",
+	"ML_CONVERTING": "Converting",
+	"ML_ADD_SENSOR_TITLE": "Add a sensor",
+	"ML_SENSOR_TYPE": "Sensor type",
+	"PREVIOUS": "Previous",
+	"NEXT": "Next"
 }
