fix: correct some grammar mistakes

--- a/packages/client/src/assets/translations/nl.json
+++ b/packages/client/src/assets/translations/nl.json
@@ -187,19 +187,19 @@
 	"ML_NOT_CONNECTED_DESC": "Verbind met je robot via Bluetooth",
 	"ML_CONNECT": "Verbind",
 	"ML_COLLECT_TITLE": "Verzamel data",
-	"ML_COLLECT_DESC": "Stel toetsen in voor classen en laat de robot zien wat hij moet doen",
+	"ML_COLLECT_DESC": "Stel toetsen in voor klassen en laat de robot zien wat hij moet doen",
 	"ML_RECORDING_FOR": "Opnemen voor {target}",
 	"ML_RECORDING": "Druk op een toets om data op te nemen",
 	"ML_RECORD": "Neem data op",
 	"ML_MANUAL": "Handmatige modus",
 	"ML_TRAIN_TITLE": "Train je model",
-	"ML_TRAIN_DESC": "Train je model en bereid hem voor voor je robot",
+	"ML_TRAIN_DESC": "Train je model en maak het gereed voor je robot",
 	"ML_EPOCHS": "Epochs",
 	"ML_DISTRIBUTION": "Verdeling",
 	"ML_TOTAL": "totaal",
 	"ML_TRAIN": "Train",
 	"ML_UPLOAD_TITLE": "Upload je model",
-	"ML_UPLOAD_DESC": "Check de kwaliteit van je model and upload hem naar je robot",
+	"ML_UPLOAD_DESC": "Check de kwaliteit van je model and upload het naar je robot",
 	"ML_PREDICTED": "Voorspeld",
 	"ML_ACTUAL": "Daadwerkelijk",
 	"ML_TRAINING": "Trainen",
