--- a/packages/client/src/assets/translations/nl.json
+++ b/packages/client/src/assets/translations/nl.json
@@ -175,5 +175,41 @@
 	"LOCAL_SAVE": "Lokaal opgeslagen",
 	"TEMP_SAVE": "Tijdelijk opgeslagen",
 	"NO_INTERNET": "Geen internetverbinding, controleer je verbinding",
-	"CHANGE_ROBOT": "Verander robot"
+	"CHANGE_ROBOT": "Verander robot",
+	"ML_OPEN": "Open ML",
+	"ML_CLOSE": "Sluit ML",
+	"ML_CLEAR_DATASETS": "Dit wist je huidige datasets, weet je zeker dat je door wilt gaan?",
+	"ML_PREPARE_TITLE": "Bereid je robot voor",
+	"ML_PREPARE_DESC": "Stel sensoren in en upload het training programma naar je robot",
+	"ML_NO_SENSORS": "Er zijn nog geen sensoren toegevoegd",
+	"ML_ADD_SENSOR": "Voeg sensor toe",
+	"ML_NOT_CONNECTED": "Niet verbonden",
+	"ML_NOT_CONNECTED_DESC": "Verbind met je robot via Bluetooth",
+	"ML_CONNECT": "Verbind",
+	"ML_COLLECT_TITLE": "Verzamel data",
+	"ML_COLLECT_DESC": "Stel toetsen in voor klassen en laat de robot zien wat hij moet doen",
+	"ML_RECORDING_FOR": "Opnemen voor {target}",
+	"ML_RECORDING": "Druk op een toets om data op te nemen",
+	"ML_RECORD": "Neem data op",
+	"ML_MANUAL": "Handmatige modus",
+	"ML_TRAIN_TITLE": "Train je model",
+	"ML_TRAIN_DESC": "Train je model en maak het gereed voor je robot",
+	"ML_EPOCHS": "Epochs",
+	"ML_DISTRIBUTION": "Verdeling",
+	"ML_TOTAL": "totaal",
+	"ML_TRAIN": "Train",
+	"ML_UPLOAD_TITLE": "Upload je model",
+	"ML_UPLOAD_DESC": "Check de kwaliteit van je model and upload het naar je robot",
+	"ML_PREDICTED": "Voorspeld",
+	"ML_ACTUAL": "Daadwerkelijk",
+	"ML_TRAINING": "Trainen",
+	"ML_CONVERTING": "Converteren",
+	"ML_ADD_SENSOR_TITLE": "Voeg een sensor toe",
+	"ML_SENSOR_TYPE": "Type sensor",
+	"ML_STEP": "Stap {step} van {total}",
+	"ML_ADVANCED_EDIT_MODEL": "Geavanceerd: bewerk model",
+	"ML_PLAYGROUND": "Machine learning playground",
+	"ML_OPEN_PLAYGROUND": "Open playground",
+	"PREVIOUS": "Vorige",
+	"NEXT": "Volgende"
 }
