feat: implement dynamic circuit schemas

--- a/packages/client/src/assets/translations/en.json
+++ b/packages/client/src/assets/translations/en.json
@@ -211,5 +211,6 @@
 	"ML_PLAYGROUND": "Machine learning playground",
 	"ML_OPEN_PLAYGROUND": "Open playground",
 	"PREVIOUS": "Previous",
-	"NEXT": "Next"
+	"NEXT": "Next",
+	"CIRCUIT": "Circuit"
 }
